Added logic to place order table

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,7 +82,7 @@
                         <td class="item-cost">$<%= food.cost %></td>
                         <td><%= food.description %></td>
                         <td class="qty">0</td>
-                        <td class="item-total"><%= food.cost %></td>
+                        <td class="item-total">$0</td>
                         <td class="edit-cart">
                           <button type="button" class="btn btn-success plus">+</button>
                           <button type="button" class="btn btn-success minus">-</button>
