--- a/styles/header.css
+++ b/styles/header.css
@@ -1,10 +1,17 @@
 nav {
   height: 120px;
   background-color: #0f606b;
-  font-family: 'Roboto', sans-serif;
+  background-color: #0f606b;
+  background-color: #0f606b;
+  background-image: url("https://www.transparenttextures.com/patterns/dark-circles.png");
 }
 
 .navbar-brand {
+  font-family: 'Comfortaa', cursive;
+  padding-left: 3%;
+}
+
+.nav-item {
   font-family: 'Comfortaa', cursive;
 }
 
@@ -14,5 +21,9 @@ nav {
         -ms-flex-pack: end;
             justify-content: flex-end;
   }
+}
+
+.logo {
+  font-size: 2.5em;
 }
 /*# sourceMappingURL=header.css.map */
