--- a/styles/login.css
+++ b/styles/login.css
@@ -1,34 +1,41 @@
 body {
   color: #fff;
-  background:#a7d2dd;
+  background: #a7d2dd;
   font-family: "Roboto", sans-serif;
 }
+
 .form-control {
   /* margin-left: 16px; */
   height: 40px;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   color: #969fa4;
 }
+
 .form-control:focus {
   border-color: #5cb85c;
 }
+
 .form-control,
 .btn {
   border-radius: 3px;
 }
-.signup-form {
+
+.signin-form {
   width: 500px;
   margin: 0 auto;
   padding: 30px 0;
 }
-.signup-form h2 {
+
+.signin-form h2 {
   color: #636363;
   margin: 0 0 15px;
   position: relative;
   text-align: center;
 }
-.signup-form h2:before,
-.signup-form h2:after {
+
+.signin-form h2:before,
+.signin-form h2:after {
   content: "";
   height: 2px;
   width: 30%;
@@ -37,57 +44,73 @@ body {
   top: 50%;
   z-index: 2;
 }
-.signup-form h2:before {
+
+.signin-form h2:before {
   left: 0;
 }
-.signup-form h2:after {
+
+.signin-form h2:after {
   right: 0;
 }
-.signup-form .hint-text {
+
+.signin-form .hint-text {
   color: #999;
   margin-bottom: 30px;
   text-align: center;
 }
-.signup-form form {
+
+.signin-form form {
   color: #999;
   border-radius: 3px;
   margin-bottom: 15px;
   background: #f2f3f7;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   padding: 30px;
 }
-.signup-form .form-group {
+
+.signin-form .form-group {
   margin-bottom: 20px;
 }
-.signup-form input[type="checkbox"] {
+
+.signin-form input[type="checkbox"] {
   margin-top: 3px;
 }
-.signup-form .btn {
+
+.signin-form .btn {
   font-size: 16px;
   font-weight: bold;
   min-width: 140px;
   outline: none !important;
 }
-.signup-form .row div:first-child {
+
+.signin-form .row div:first-child {
   padding-right: 10px;
 }
-.signup-form .row div:last-child {
+
+.signin-form .row div:last-child {
   padding-left: 10px;
 }
-.signup-form a {
+
+.signin-form a {
   color: #fff;
   text-decoration: underline;
 }
-.signup-form a:hover {
+
+.signin-form a:hover {
   text-decoration: none;
 }
-.signup-form form a {
+
+.signin-form form a {
   color: #5cb85c;
   text-decoration: none;
 }
-.signup-form form a:hover {
+
+.signin-form form a:hover {
   text-decoration: underline;
 }
 
 .row {
-margin-left: 0px;}
+  margin-left: 0px;
+}
+/*# sourceMappingURL=login.css.map */
