--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,7 @@
      <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
      <link rel="stylesheet" href="/styles/header.css" type="text/css" />
      <link rel="stylesheet" href="/styles/checkout.css" type="text/css" />
+     <link rel="stylesheet" href="/styles/index.css" type="text/css" />
 
      <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
      <script type="text/javascript" src="/scripts/app.js"></script>
@@ -41,15 +42,16 @@
 
     <!-- home page header with restaurant name and welcome message. -->
     <header>
-      <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <h1 class="display-4">Welcome to our Restaurant!</h1>
-          <p class="lead">
-            Browse our menu and fill your cart. When you're ready to order,
-            click checkout in the top right corner. We will notify you via sms
-            your order status. Enjoy!
-          </p>
-        </div>
+      <div class="jumbotron jumbotron-fluid hero">
+      <h1 class="display-7 hero-text">FAST. FRESH. LOCAL</h1>
+      </div>
+      <div class="container">
+        <h1 class="display-7">Welcome to our Restaurant!</h1>
+        <p class="lead">
+          Browse our menu and fill your cart. When you're ready to order,
+          click checkout in the top right corner. We will notify you via sms
+          your order status. Enjoy!
+        </p>
       </div>
     </header>
   <main>
@@ -97,7 +99,7 @@
         </div>
         <div class="col col-sm-4">
           <section class="place-order">
-            <h2>Place Your Order</h2>
+            <h2 id="checkout">Place Your Order</h2>
             <table class="table">
               <thead>
                 <tr>
@@ -120,7 +122,7 @@
               </tbody>
             </table>
             <form action="/myorders" method="post">
-              <button type="submit" class="btn btn-success confirm">Confirm</button>
+              <button type="submit" class="btn btn-success" id="confirm">Confirm</button>
             </form>
           </section>
         </div>
