--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark" id="main-nav">
-  <a class="navbar-brand" href="/">mood4food</a>
+  <a class="navbar-brand logo" href="/">mood4food</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -21,10 +21,7 @@
         <a class="nav-link" href="/register"><strong>Register</strong></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/myorders"><strong>My Orders</strong></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link cart" href="/checkout"><strong>Checkout</strong><i class="fas fa-shopping-cart"></i></a>
+        <a class="nav-link cart" href="/#checkout"><strong>Checkout</strong><i class="fas fa-shopping-cart"></i></a>
       </li>
     </ul>
   </div>
