Playing around with how to get the active nav bar links to work. Issue: page refreshes on each pg change

--- a/styles/header.css
+++ b/styles/header.css
@@ -15,6 +15,10 @@ nav {
   font-family: 'Comfortaa', cursive;
 }
 
+.nav-item:after {
+  color: white;
+}
+
 @media (min-width: 992px) {
   .navbar-expand-lg .navbar-collapse {
     -webkit-box-pack: end;
