--- a/styles/header.scss
+++ b/styles/header.scss
@@ -15,6 +15,10 @@ nav {
   font-family: 'Comfortaa', cursive;
 }
 
+.nav-item:after {
+  color: white;
+}
+
 @media (min-width: 992px) {
   .navbar-expand-lg .navbar-collapse {
     justify-content: flex-end;
