--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -15,7 +15,7 @@
       </li>
       <%}%>
       <li class="nav-item active">
-        <a class="nav-link" href="/"><strong>Menu</strong><span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/"><strong>Menu</strong></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/register"><strong>Register</strong></a>
