--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -35,6 +35,7 @@
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/header.js"></script>
   </head>
 
   <body>
