adding sticky to confirm box

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,10 @@
+.place-order{
+  position: sticky;
+  top: 500px;
+  height: 40px;
+  // border: 2px solid red;
+}
+
 .hero {
   background-image: url("https://images.pexels.com/photos/2098134/pexels-photo-2098134.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
   width:100%;
