adding seeds with real data and populating on the browser

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,7 +78,7 @@
                   <tbody>
                     <% for(const food of menuItems) { %>
                       <tr>
-                        <td>
+                        <td class='food-photo'>
                           <img src="<%= food.food_photo_url %>" />
                         </td>
                         <td><%= food.name %></td>
