renders to a new page on button click and sends message

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,7 +122,7 @@
                 </tr>
               </tbody>
             </table>
-            <form action="/myorders" method="get">
+            <form action="/confirm" method="get">
               <button type="submit" class="btn btn-success" id="confirm">Confirm</button>
             </form>
           </section>
