Add logic to add information to orders db

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,6 +66,7 @@
                 <table class="table table-responsive">
                   <thead class="thead-light">
                     <tr>
+                      <th scope="col" id="hide-food-id">Food ID</th>
                       <th scope="col">Image</th>
                       <th scope="col">Name</th>
                       <th scope="col">Cost</th>
@@ -77,13 +78,14 @@
                   </thead>
                   <tbody>
                     <% for(const food of menuItems) { %>
-                      <tr>
+                      <tr class="food-row">
+                        <td class="hide food-id"><%= food.id %></td>
                         <td>
-                          <img src="<%= food.food_photo_url %>" />
+                          <img class="foot-photos" src="<%= food.food_photo_url %>" />
                         </td>
-                        <td><%= food.name %></td>
+                        <td class="food-name"><%= food.name %></td>
                         <td class="item-cost">$<%= food.cost %></td>
-                        <td><%= food.description %></td>
+                        <td class="food-description"><%= food.description %></td>
                         <td class="qty">0</td>
                         <td class="item-total">$0</td>
                         <td class="edit-cart">
@@ -122,8 +124,8 @@
                 </tr>
               </tbody>
             </table>
-            <form action="/myorders" method="post">
-              <button type="submit" class="btn btn-success" id="confirm">Confirm</button>
+            <form>
+              <button type="button" class="btn btn-success" id="confirm">Confirm</button>
             </form>
           </section>
         </div>
