fetching time from sms in the post function

--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -57,6 +57,10 @@
           checkout in the top right corner. We will notify you via sms your
           order status. Enjoy!
         </p>
+        <p>
+          The restaurant was texted at: <%=message.to%> and notified of your
+          order.
+        </p>
       </div>
     </header>
     <main></main>
