--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -61,6 +61,7 @@
           The restaurant was texted at: <%=message.to%> and notified of your
           order.
         </p>
+        <p>order time: <%orderTime%></p>
       </div>
     </header>
     <main></main>
