wrote function to extract order time from sms

--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -58,8 +58,8 @@
           order status. Enjoy!
         </p>
         <p>
-          The restaurant was texted at: <%=message.to%> and notified of your
-          order.
+          Your order message has been confirmed at: <%=message.to%> <br />We
+          will be updating the estimated time of your order shortly.
         </p>
       </div>
     </header>
