fixing styling on checkout page

--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -52,15 +52,10 @@
       </div>
       <div class="container">
         <h1 class="display-7">Thank you for your order!</h1>
-        <p class="lead">
-          Browse our menu and fill your cart. When you're ready to order, click
-          checkout in the top right corner. We will notify you via sms your
-          order status. Enjoy!
-        </p>
-        <p>
+        <h3 class="lead">
           Your order message has been confirmed at: <%=message.to%> <br />We
           will be updating the estimated time of your order shortly.
-        </p>
+        </h3>
       </div>
     </header>
     <main></main>
