Continue work on figuring out checkout

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -120,8 +120,9 @@
                 </tr>
               </tbody>
             </table>
-            <form action="/checkout" method="POST">
-              <button type="submit" class="btn btn-success" id="confirm">Confirm</button>
+            <!-- <form action="/checkout" method="POST"> -->
+            <form>
+              <button type="button" class="btn btn-success" id="confirm">Confirm</button>
             </form>
           </section>
         </div>
