--- a/styles/index.scss
+++ b/styles/index.scss
@@ -23,8 +23,8 @@
 }
 
 td.food-photo img{
-  width: 30px;
-  height: 30px;
+  width: 60px;
+  height: 60px;
 }
 
 .btn-inc-dec-rem{
@@ -71,4 +71,29 @@ td.food-photo img{
 #hide-food-id {
   display: none;
 
+}
+
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
 }
