--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,8 +30,8 @@
 
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
-  <script type="text/javascript" src="/scripts/checkout.js"></script>
   <script type="text/javascript" src="/scripts/header.js"></script>
+  <script type="text/javascript" src="/scripts/checkout.js"></script>
 </head>
 
 <body>
@@ -56,41 +56,50 @@
       <div class="row">
         <div class="col col-sm-8">
           <section class="order-info">
-            <h2>Your Cart</h2>
+            <% if (time < 14) { %>
+              <h2>What's for Breakfast?</h2>
+            <% } else if (time > 14 && time < 9) { %>
+              <h2>What's for Lunch?</h2>
+            <% } else { %>
+                <h2>What's for Dinner?</h2>
+            <% } %>
             <div class="row justify-content-center">
               <div class="col-auto">
                 <table class="table table-responsive">
                   <thead class="thead-light">
                     <tr>
                       <th scope="col" id="hide-food-id">Food ID</th>
-                      <th scope="col">Image</th>
-                      <th scope="col">Name</th>
+                      <th scope="col"></th>
+                      <th scope="col">Expand to Read More!</th>
                       <th scope="col">Cost</th>
-                      <th scope="col">Description</th>
                       <th scope="col">Quantity</th>
                       <th scope="col">Item Total</th>
                       <th scope="col">Add to Cart</th>
                     </tr>
                   </thead>
                   <tbody>
-                    <% for(const food of menuItems) { %>
-                      <tr class="food-row">
-                        <td class="hide food-id"><%= food.id %></td>
-                        <td class='food-photo'>
-                          <img src="<%= food.food_photo_url %>" />
-                        </td>
-                        <td class="food-name"><%= food.name %></td>
-                        <td class="item-cost">$<%= food.cost %></td>
-                        <td class="food-description"><%= food.description %></td>
-                        <td class="qty">0</td>
-                        <td class="item-total">$0</td>
-                        <td class="edit-cart">
-                          <button type="button" class="btn btn-success plus">+</button>
-                          <button type="button" class="btn btn-success minus">-</button>
-                          <button type="button" class="btn btn-success remove">x</button>
-                        </td>
-                      </tr>
-                      <% } %>
+                  <% for(const food of menuItems) { %>
+                    <tr class="food-row">
+                      <td class="hide food-id"><%= food.id %></td>
+                      <td class='food-photo'>
+                        <img src="<%= food.food_photo_url %>" />
+                      </td>
+                      <td class="food-name">
+                        <button type="button" class="collapsible"><%= food.name %> <i class="fas fa-arrow-down"></i></button>
+                        <div class="content">
+                          <p><%= food.description %></p>
+                        </div>
+                      </td>
+                      <td class="item-cost">$<%= food.cost %></td>
+                      <td class="qty">0</td>
+                      <td class="item-total">$0</td>
+                      <td class="edit-cart">
+                        <button type="button" class="btn btn-success plus">+</button>
+                        <button type="button" class="btn btn-success minus">-</button>
+                        <button type="button" class="btn btn-success remove">x</button>
+                      </td>
+                    </tr>
+                    <% } %>
                     </table>
               </div>
             </div>
