--- a/styles/index.scss
+++ b/styles/index.scss
@@ -86,7 +86,7 @@ td.food-photo img{
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .collapsible:hover {
+td .active, .collapsible:hover {
   background-color: #ccc;
 }
 
