Remove unnecassary table header

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,14 +40,13 @@
   <!-- home page header with restaurant name and welcome message. -->
   <header>
     <div class="jumbotron jumbotron-fluid hero">
-      <h1 class="display-7 hero-text">FAST. FRESH. LOCAL</h1>
+      <h1 class="display-7 hero-text">FRESH EATS & TASTY TREATS</h1>
     </div>
     <div class="container">
       <h1 class="display-7">Welcome to our Restaurant!</h1>
       <p class="lead">
-        Browse our menu and fill your cart. When you're ready to order,
-        click checkout in the top right corner. We will notify you via sms
-        your order status. Enjoy!
+        Browse our menu and fill your cart. Simply hit checkout and we will notify you of
+        your order status via sms. Enjoy!
       </p>
     </div>
   </header>
@@ -109,11 +108,6 @@
           <section class="place-order">
             <h2 id="checkout">Place Your Order</h2>
             <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">Total</th>
-                </tr>
-              </thead>
               <tbody>
                 <tr>
                   <th scope="row">Item Total</th>
@@ -127,10 +121,18 @@
                   <th scope="row">Grand Total</th>
                   <td class="order-grand-total">$0</td>
                 </tr>
+                <tr>
+                  <th scope="row">Order Notes</th>
+                  <td class="order-notes">
+                    <form action = "">
+                      <textarea name="text" placeholder="Allergies? Mods? Love notes? Leave it here"></textarea>
+                    </form>
+                  </td>
+                </tr>
               </tbody>
             </table>
             <form action="/confirm" method="get">
-              <button type="submit" class="btn btn-success" id="confirm">Confirm</button>
+              <button type="submit" class="btn btn-success" id="confirm">I'm Ready! Confirm Order</button>
             </form>
           </section>
         </div>
