--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,7 +1,7 @@
 // See: https://sass-lang.com/
 
 body {
-  background-color: #fafbf5;
+  background-color: rgba(167.0, 210.0, 221.0, .1);
 
   h1, h2 {
     color:#0f606b;
