More minor styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,11 +56,11 @@
         <div class="col col-sm-8">
           <section class="order-info">
             <% if (time < 14) { %>
-              <h2>What's for Breakfast?</h2>
+              <h2>What's for <strong>Breakfast</strong>?</h2>
             <% } else if (time > 14 && time < 9) { %>
-              <h2>What's for Lunch?</h2>
+              <h2>What's for <strong>Lunch</strong>?</h2>
             <% } else { %>
-                <h2>What's for Dinner?</h2>
+                <h2>What's for <strong>Dinner</strong>?</h2>
             <% } %>
             <div class="row justify-content-center">
               <div class="col-auto">
