More minor styling to headers on index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
       <h1 class="display-7 hero-text">FRESH EATS & TASTY TREATS</h1>
     </div>
     <div class="container">
-      <h1 class="display-7">Welcome to our Restaurant!</h1>
+      <h1 display-7>Welcome to our Restaurant!</h1>
       <p class="lead">
         Browse our menu and fill your cart. Simply hit checkout and we will notify you of
         your order status via sms. Enjoy!
@@ -106,7 +106,7 @@
         </div>
         <div class="col col-sm-4">
           <section class="place-order">
-            <h2 id="checkout">Place Your Order</h2>
+            <h2 id="checkout"><strong>Place Your Order</strong></h2>
             <table class="table">
               <tbody>
                 <tr>
