--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,7 @@
           <section class="order-info">
             <% if (time < 14) { %>
               <h2>What's for <strong>Breakfast</strong>?</h2>
-            <% } else if (time > 14 && time < 9) { %>
+            <% } else if (time >= 14 && time <= 18) { %>
               <h2>What's for <strong>Lunch</strong>?</h2>
             <% } else { %>
                 <h2>What's for <strong>Dinner</strong>?</h2>
