removed sensitive data from env

--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -53,10 +53,11 @@
       </div>
       <div class="container">
         <h1 class="display-7">Thank you for your order!</h1>
-        <h3 class="lead">
+        <h2 class="lead">
           Your order message has been confirmed at: <%=message.to%> <br />We
           will be updating the estimated time of your order shortly.
-        </h3>
+        </h2>
+        <h3 id="delivery-time">Your estimated deliver time is:</h3>
       </div>
     </header>
     <main></main>
