updating some merge info

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,8 +122,9 @@
                 </tr>
               </tbody>
             </table>
-            <form action="/confirm" method="get">
-              <button type="submit" class="btn btn-success" id="confirm">Confirm</button>
+            <form action="/confirm" method="POST">
+              <textarea name="orderNotes" placeholder="Allergies? Mods? Love notes? Leave it here"></textarea>
+              <button type="submit" class="btn btn-success" id="confirm">I'm Ready! Confirm Order</button>
             </form>
           </section>
         </div>
@@ -136,4 +137,3 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
-</html>
