--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,7 @@
   <script type="text/javascript" src="/scripts/app.js"></script>
   <script type="text/javascript" src="/scripts/header.js"></script>
   <script type="text/javascript" src="/scripts/checkout.js"></script>
+  <script type="text/javascript" src="../addOrderToDb.js"></script>
 </head>
 
 <body>
