Comment out old code causing error

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -123,14 +123,16 @@
                 </tr>
               </tbody>
             </table>
-            <form action="/confirm" method="POST">
-              <div class="checkout-form">
+            <div class="checkout-form"></div>
+              <form action="/confirm" method="POST">
+
                 <textarea class="order-notes" name="orderNotes" placeholder="Allergies? Mods? Love notes? Leave it here"></textarea>
                 <button type="submit" class="btn btn-success" id="confirm">I'm Ready! Confirm Order</button>
-              </div>
-              <textarea class="hide" name="foodQty" id="food-qty"></textarea>
-              <textarea class="hide" name="orderTotal" id="order-total"></textarea>
-            </form>
+                <textarea name="foodQty" id="food-qty"></textarea>
+                <textarea name="orderTotal" id="order-total"></textarea>
+
+              </form>
+            </div>
           </section>
         </div>
       </div>
