Change class of textarea

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,8 +128,8 @@
 
                 <textarea class="order-notes" name="orderNotes" placeholder="Allergies? Mods? Love notes? Leave it here"></textarea>
                 <button type="submit" class="btn btn-success" id="confirm">I'm Ready! Confirm Order</button>
-                <textarea name="foodQty" id="food-qty"></textarea>
-                <textarea name="orderTotal" id="order-total"></textarea>
+                <textarea name="foodQty" class="hide" id="food-qty"></textarea>
+                <textarea name="orderTotal" class="hide" id="order-total"></textarea>
 
               </form>
             </div>
