adding login validation

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -36,6 +36,8 @@
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/header.js"></script>
+    <script type="text/javascript" src="../public/scripts/login_reg_error.js"></script>
+
   </head>
 
 <body>
