--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -39,7 +39,12 @@
     <link rel="stylesheet" href="/styles/index.css" type="text/css" />
     <link rel="stylesheet" href="/styles/confirmation.css" type="text/css" />
 
-    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+    <!-- <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script> -->
+    <script
+        src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/checkout.js"></script>
     <script type="text/javascript" src="/scripts/header.js"></script>
@@ -63,9 +68,10 @@
           <li class="list-group-item">Special Notes: <%= orderNotes %></li>
         </ul>
         <div class="alert alert-info" role="alert">
-          <button type="button" class="btn btn-light">
+          <button type="button" id="btn" class="btn btn-light">
             Check delivery time
           </button>
+          <div id='delivery-time'></div>
           <span class="badge badge-secondary">
             <% if (orderStatus='ip') { %>
             <h3>Restaurant has not updated order time yet. Try again later.</h3>
@@ -80,11 +86,11 @@
 
     <footer></footer>
     <!-- Bootstrap JS -->
-    <script
+    <!-- <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
