Mostly fix buttons

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -108,7 +108,7 @@ main {
 }
 
 #confirm {
-  width: 100%;
+  width: 50%;
 }
 
 .container h2 {
@@ -117,5 +117,6 @@ main {
 }
 
 .order-notes {
-  width: 100%
+  width: 100%;
+  margin-right: 1em;
 }
