--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -2,7 +2,7 @@
 <footer class="page-footer font-small blue">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+  <div id="copyright" class="footer-copyright text-center py-3">© 2020 Copyright:
     <a href="/"> Mood4Food </a>
   </div>
   <!-- Copyright -->
