--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -42,9 +42,10 @@
 
     <!-- <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script> -->
     <script
-        src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-        crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/checkout.js"></script>
@@ -62,9 +63,12 @@
         <h3 class="lead">
           Your order message has been confirmed at: <%=message.to%>
         </h3>
+
         <ul class="list-group">
           <li class="list-group-item list-group-item-info">Order Summary</li>
-          <li class="list-group-item"><%=nameAndQty %></li>
+          <% for (let item of foodArr) { %>
+          <li class="list-group-item"><%=item %></li>
+          <% }%>
           <li class="list-group-item">Total: <%=orderTotal %></li>
           <li class="list-group-item">Special Notes: <%= orderNotes %></li>
         </ul>
@@ -72,7 +76,9 @@
           <button type="button" id="btn" class="btn btn-light">
             Check delivery time
           </button>
-          <h3 class="badge badge-secondary" id='delivery-time'>Your order will be ready in: </h3>
+        </div>
+        <div class="alert alert-info" role="alert" id="deliverContainer">
+          <h3 id="delivery-time"></h3>
         </div>
       </div>
     </header>
