--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,6 +1,8 @@
 footer{
-
-    height: 80px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
     background-color: #0f606b;
     background-image: url("https://www.transparenttextures.com/patterns/dark-circles.png");
 
