--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,7 +10,7 @@
   width:100%;
   background-size: cover;
   background-position: center;
-  height: 225px;
+  height: 300px;
 }
 
 .hero-text {
@@ -21,6 +21,7 @@
   font-weight: 900;
   justify-content: center;
   align-content: center;
+  padding-top: 1em;
 }
 
 td.food-photo img{
@@ -112,7 +113,7 @@ main {
 }
 
 .container h2 {
-  background-color: #a7d2dd;
+  background-color: #0f606b;;
   padding: .5em;
 }
 
