Tested, working, let's go

--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -55,6 +55,7 @@
   <body>
     <!-- home page header with restaurant name and welcome message. -->
     <header>
+      <%- include('partials/_header') %>
       <div class="jumbotron jumbotron-fluid hero">
         <h1 class="display-7 hero-text">FAST. FRESH. LOCAL</h1>
       </div>
