--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,7 +6,7 @@
 }
 
 .hero {
-  background-image: url("https://images.pexels.com/photos/2983101/pexels-photo-2983101.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  background-image: url("https://img.mobygeek.com/crop/1200x628/2020/02/23/indian-food-salinda-41c0.jpg");
   width:100%;
   background-size: cover;
   background-position: center;
@@ -22,6 +22,8 @@
   justify-content: center;
   align-content: center;
   padding-top: 1em;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding-bottom: 1em;
 }
 
 td.food-photo img{
