--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -76,8 +76,9 @@
       </form>
       <div class="text-center">Already have an account? <a href="/login">Sign in</a></div>
     </div>
-
+    <div>
     <%- include('partials/_footer') %>
+  </div>
 
   <!-- Bootstrap JS -->
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
