--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,8 +1,8 @@
 <!-- Footer -->
-<footer class="page-footer font-small blue">
+<footer>
 
   <!-- Copyright -->
-  <div id="copyright" class="footer-copyright text-center py-3">© 2020 Copyright:
+  <div id="copyright" class="footer">© 2020 Copyright:
     <a href="/"> Mood4Food </a>
   </div>
   <!-- Copyright -->
