--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,15 +1,19 @@
 footer{
-    bottom: 0;
+    position: absolute;
     width: 100%;
-    height: 40px;
+    height: 65px;
     background-color: #0f606b;
     background-image: url("https://www.transparenttextures.com/patterns/dark-circles.png");
     display: flex;
     justify-content: center;
+    align-content: center;
 }
 
 #copyright{
   color: white;
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }
 
 a{
