--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -62,7 +62,7 @@
       <div class="container">
         <h1 class="display-7">Thank you for your order!</h1>
         <h3 class="lead">
-          Your order message has been confirmed at: <%=message.to%>
+          <!-- Your order message has been confirmed at: %=message.to%> -->
         </h3>
 
         <ul class="list-group">
@@ -76,9 +76,9 @@
           <li class="list-group-item">Special Notes: <%= orderNotes %></li>
         </ul>
         <div class="alert alert-info" role="alert">
-          <button type="button" id="btn" class="btn btn-light">
+          <!-- <button type="button" id="btn" class="btn btn-light">
             Check delivery time
-          </button>
+          </button> -->
         </div>
         <div
           class="alert alert-info"
