--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -45,6 +45,7 @@
 
   <body>
     <%- include('partials/_header') %>
+    <main>
     <div class="signup-form">
       <form action="/registration" method="post">
         <h2>Register</h2>
@@ -74,11 +75,13 @@
           <button type="submit" class="btn btn-success btn-lg btn-block">Register Now</button>
         </div>
       </form>
+      <% if (error) { %>
+        <div class="text-center"><h2 style="color: red"><%= error %></h2></div>
+      <% } %>
       <div class="text-center">Already have an account? <a href="/login">Sign in</a></div>
     </div>
-    <div>
-    <%- include('partials/_footer') %>
-  </div>
+  </main>
+  <%- include('partials/_footer') %>
 
   <!-- Bootstrap JS -->
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
