--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -62,7 +62,9 @@
       <div class="container">
         <h1 class="display-7">Thank you for your order!</h1>
         <h3 class="lead">
+          <!-- --- uncomment for twilio deploy -->
           <!-- Your order message has been confirmed at: %=message.to%> -->
+          Your order will be ready in 30 minutes.
         </h3>
 
         <ul class="list-group">
@@ -76,6 +78,7 @@
           <li class="list-group-item">Special Notes: <%= orderNotes %></li>
         </ul>
         <div class="alert alert-info" role="alert">
+          <!-- --- uncomment for twilio deploy -->
           <!-- <button type="button" id="btn" class="btn btn-light">
             Check delivery time
           </button> -->
@@ -93,12 +96,7 @@
     <main></main>
 
     <%- include('partials/_footer') %>
-    <!-- Bootstrap JS -->
-    <!-- <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script> -->
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
