--- a/views/confirmation.ejs
+++ b/views/confirmation.ejs
@@ -64,6 +64,7 @@
         <h3 class="lead">
           <!-- --- uncomment for twilio deploy -->
           <!-- Your order message has been confirmed at: %=message.to%> -->
+          <!-- --- remove for twilio deploy -->
           Your order will be ready in 30 minutes.
         </h3>
 
